Start of class 4

--- a/Python_Introduction.ipynb
+++ b/Python_Introduction.ipynb
@@ -3114,36 +3114,41 @@
     "# MODULES - EXTERNAL CODE\n",
     "- In Python, we can create our own modules to store\r\n",
     "code and import that code to other programs\n",
-    "- Why do this? Reusability and modularity.."
+    "- Why do this? Reusability and modularity.\n",
+    "- Python (.py) files in the same folder as our program can be directly imported.\n",
+    "- We can organize our modules in packages (don't forget those init files)."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a213b7a7-4264-484c-b680-c78bd50e9077",
+   "metadata": {},
+   "source": [
+    "retailxy/\n",
+    "|- __init__.py\n",
+    "|- products-py\n",
+    "|\n",
+    "|- marketing/\n",
+    "|     |- __init__.py\n",
+    "|     |- discounts.py\n",
+    "|     |- promotions.py"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "e48f9f0e-c213-49dc-9e51-e30faaccb149",
+   "metadata": {},
+   "source": [
+    "import retailxy.marketing as mark\n",
+    "from products import * # all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f5c38ebd-51b8-4586-85b7-2fa7482193a4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1000,\n",
-       " 1020.0,\n",
-       " 1040.4,\n",
-       " 1061.208,\n",
-       " 1082.43216,\n",
-       " 1104.0808032,\n",
-       " 1126.162419264,\n",
-       " 1148.68566764928,\n",
-       " 1171.6593810022657,\n",
-       " 1195.092568622311,\n",
-       " 1218.9944199947574]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the sim module (files are in the same project folder)\n",
     "import sim\n",
@@ -3153,31 +3158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "93ae9422-5970-449b-af2e-b2f5942f4761",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1000,\n",
-       " 1030.0,\n",
-       " 1060.9,\n",
-       " 1092.727,\n",
-       " 1125.50881,\n",
-       " 1159.2740743000002,\n",
-       " 1194.0522965290002,\n",
-       " 1229.8738654248702,\n",
-       " 1266.7700813876163,\n",
-       " 1304.7731838292448,\n",
-       " 1343.916379344122]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the sim module from the ml package (folder ml)\n",
     "import ml.sim as sim\n",
@@ -3187,31 +3171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9ba3987e-bd3c-4217-9c9d-6b7b352481b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1000,\n",
-       " 1050.0,\n",
-       " 1102.5,\n",
-       " 1157.625,\n",
-       " 1215.5062500000001,\n",
-       " 1276.2815625000003,\n",
-       " 1340.0956406250004,\n",
-       " 1407.1004226562504,\n",
-       " 1477.455443789063,\n",
-       " 1551.3282159785163,\n",
-       " 1628.8946267774422]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the sim module from the ml.predictions subpackage (folder predictions inside ml)\n",
     "import ml.predictions.sim as sim\n",
@@ -3222,21 +3185,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7ad1e1e7-7a37-4899-a8bc-d41437478107",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'CH'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the sim module from the ml.predictions subpackage (folder predictions inside ml)\n",
     "import ml.predictions.sim as sim\n",
@@ -3266,7 +3218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "42d0c22f-8d79-441d-b208-f0c66e299147",
    "metadata": {},
    "outputs": [],
@@ -3279,28 +3231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "edb18db5-0b44-4cd3-824d-30358bf44f48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "isto é um teste\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.NewClass at 0x23a2b132190>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "NewClass(\"isto é um teste\")"
    ]
@@ -3392,11 +3326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a5cfd254-c0fa-4d16-81a2-a04da416a676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overwrites everything\n"
+     ]
+    }
+   ],
    "source": [
+    "# CONTEXT MANAGER\n",
     "with open(\"test_file.txt\", \"r\") as f:\n",
     "    data = f.read()\n",
     "print(data)"
@@ -3657,6 +3600,207 @@
     "- retrieving absolute and relative paths\n",
     "- concatenating paths"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f891b810-d446-4f45-8760-f8a3de3cecc9",
+   "metadata": {},
+   "source": [
+    "# LEARNING OUTCOMES - YOU'LL BE ABLE TO:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5191ff10-b5ab-4837-9e8b-18bd0b093d2e",
+   "metadata": {},
+   "source": [
+    "- Read tracebacks to find and fix errors\n",
+    "- Catch exceptions to prevent program crashes\n",
+    "- Understand the basic concepts of Object Oriented Programming\n",
+    "- Create basic classes\n",
+    "- Use classes from other packages\n",
+    "- Use the debugger to find and fix errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86da177c-ee74-49f6-b8de-6eb82183e31c",
+   "metadata": {},
+   "source": [
+    "# EXCEPTIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6da3061-792b-46c3-b3b0-90acd5f92fd7",
+   "metadata": {},
+   "source": [
+    "- Unexpected behaviour can manifest itself as an exception\n",
+    "- If not dealt with, exceptions break our programs."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "3bf4d59c-2aed-474b-a919-6b62cd390862",
+   "metadata": {},
+   "source": [
+    "int(\"Hello Universe\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11049191-d9a8-424f-b7ce-1b2554bd240e",
+   "metadata": {},
+   "source": [
+    "- Converting a nonnumeric string to an integer is unexpected behaviour, and a **ValueError** exception is thrown."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d386a822-6520-49b7-aaf5-92f8e3d91e52",
+   "metadata": {},
+   "source": [
+    "read_my_file(\"imaginary_file.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83d4e97d-693d-4377-863a-131b91fbbf1a",
+   "metadata": {},
+   "source": [
+    "- The file imaginary_file.txt does not exist, so a **FileNotFoundError** exception is thrown."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c080e2e4-4010-4e84-9689-615ba010a541",
+   "metadata": {},
+   "source": [
+    "- Python has many different exceptions.\n",
+    "- Their name is ussually sugestive of the problem we're facing.\n",
+    "- Many packages define their own exceptions and sometimes those are not as suggestive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f479d58d-6492-4ca0-a0cf-19d909b14d30",
+   "metadata": {},
+   "source": [
+    "- **ValueError**\n",
+    "Occurs when a built-in operation or function receives an argument of the correct type but an inappropriate value.\n",
+    "- **FileNotFoundError**\n",
+    "Raised when a file or directory is requested but cannot be found.\n",
+    "- **TypeError**\n",
+    "Raised when an operation or function is applied to an object of an inappropriate type.\n",
+    "- **IndexError**\n",
+    "Occurs when a sequence subscript is out of range.\n",
+    "- **KeyError**\n",
+    "Raised when a dictionary key is not found.\n",
+    "- **SyntaxError**\n",
+    "Occurs when the Python parser encounters a syntax error.\n",
+    "- **NameError**\n",
+    "Raised when a local or global name is not found.\n",
+    "- **AttributeError**\n",
+    "Occurs when an attribute reference or assignment fails."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58e57b02-717a-4c4b-b1c9-1f2560feb9d3",
+   "metadata": {},
+   "source": [
+    "When we get an exception, we get:\n",
+    "1. The type of the exception, e.g.\n",
+    "    - **FileNotFoundError**\n",
+    "2. Usually, a suggestive string, e.g.\n",
+    "    - No such file or directory: 'imaginary_file.txt'\n",
+    "3. A Traceback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e8181b1-70b5-4666-8cca-72210291db15",
+   "metadata": {},
+   "source": [
+    "TRACEBACK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3006c5c6-49cb-42f7-98de-0a5c14143684",
+   "metadata": {},
+   "source": [
+    "- The traceback is the trace of instructions from our program's origin to the point where the exception hapenned.\n",
+    "- If an exception was thrown inside a function:\n",
+    "    - the traceback includes the line where the function was called\n",
+    "    - and then the line inside the function where the exception was thrown.\n",
+    "    -  recursively\n",
+    "-  It's a traceback because it allows us to trace the problem back to its root. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a0913f0-7e7d-4b6d-b79a-b6f92da5d0a6",
+   "metadata": {},
+   "source": [
+    "# CATCHING ERRORS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c490dbe2-54c5-4792-800b-d0b0fe166392",
+   "metadata": {},
+   "source": [
+    "29:30"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc18ab5e-ccb2-44cf-aebc-f652e71eac44",
+   "metadata": {},
+   "source": [
+    "# CLASSES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "987e9c42-28bd-413a-878f-14e55bdc0567",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc68fa8c-aac1-4571-a132-298c685e6065",
+   "metadata": {},
+   "source": [
+    "# DEBUGGING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b3cef48-ff11-44ed-a299-db21bbb9f08c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a3b32c-ac95-4ff3-a2f5-91c6b2cae47f",
+   "metadata": {},
+   "source": [
+    "# DEMO & EXERCISE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f1deb4-d077-4ca1-ab74-20e2f368b88c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
