Color in Python_Introduction.ipynb titles

--- a/Python_Introduction.ipynb
+++ b/Python_Introduction.ipynb
@@ -5,8 +5,9 @@
    "id": "6669c15c-12f9-45e5-bc06-921ec4d17d59",
    "metadata": {},
    "source": [
-    "# Introduction to Pyhton\n",
-    "https://docs.python.org/3/library/index.html"
+    "<h1 style=\"color:orange;\">Introduction to Pyhton</h1>\n",
+    "\n",
+    "[Python 3 Library](https://docs.python.org/3/library/index.html)"
    ]
   },
   {
@@ -47,10 +48,9 @@
    "id": "2984aa62-c380-40e0-9806-54f3a6a534b0",
    "metadata": {},
    "source": [
-    "## Variables\n",
-    "- A variable is a placeholder for some value. Think of it \n",
-    "like a box where you can put anything you want and\r\n",
-    "retrieve it later."
+    "<h2 style=\"color:orange;\">Variables</h2>\n",
+    "\n",
+    "- A variable is a placeholder for some value. Think of it like a box where you can put anything you want and retrieve it later."
    ]
   },
   {
@@ -91,7 +91,8 @@
    "id": "04d57cb2-63ab-4bf4-bd73-1956d9080aa2",
    "metadata": {},
    "source": [
-    "## Input/Output\n",
+    "<h2 style=\"color:orange;\">Input/Output</h2>\n",
+    "\n",
     "- Interacting with the outside\n",
     "    - Terminal\n",
     "        - print: send values to user\n",
@@ -795,12 +796,15 @@
    "id": "aeff6ef2-6323-4404-8e0f-781a3ff5c0b2",
    "metadata": {},
    "source": [
-    "# Checks if a number is between 10 and 20, or is less than 5 and not equal to 0, using the not operator\n",
+    "### Checks if a number is between 10 and 20, or is less than 5 and not equal to 0, using the not operator\n",
+    "\n",
+    "```python\n",
     "number = int(input(\"Enter the number: \"))\n",
     "if not ((number < 10 or number > 20) and (number >= 5 or number == 0)):\n",
     "    print(\"The number is within the desired range or is less than 5 and not equal to zero.\")\n",
     "else:\n",
-    "    print(\"The number does not satisfy the desired conditions.\")"
+    "    print(\"The number does not satisfy the desired conditions.\")\n",
+    "```"
    ]
   },
   {
@@ -958,7 +962,8 @@
    "id": "a88181d4-a43c-493d-859d-bb5932af4aab",
    "metadata": {},
    "source": [
-    "# Lists and Tuples\n",
+    "<h2 style=\"color:orange;\">Lists and Tuples</h2>\n",
+    "\n",
     "- Data structures\n",
     "- So far we've stored only single values in variables\n",
     "- Python's list allows us to store multiple values"
@@ -2021,7 +2026,7 @@
    "id": "d932d14b-3e16-4f53-be09-8c66894df547",
    "metadata": {},
    "source": [
-    "# Exercise with loops and lists:"
+    "<h2 style=\"color:orange;\">Exercise with loops and lists:</h2>"
    ]
   },
   {
@@ -2436,14 +2441,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bfd7ce00",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:orange;\">FUNCTIONS</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fcdd7c4d-a733-4b62-bafd-0faffa1253ba",
    "metadata": {},
    "source": [
-    "# FUNCTIONS\n",
     "- How to reuse the same logic for different things?\n",
     "- We can think of a function as a black box that receives inputs and gives outputs.\n",
     "- What function we see before?\n",
+    "```python\n",
     "    - enumerate(), zip(), range(), int(), float(), str()\n",
+    "```\n",
     "- We define a function with the def keyword\n",
     "- Followed by the name of the function\n",
     "- Inside the () we write the names os the inputs the function should receive."
@@ -2782,7 +2796,7 @@
    "id": "b10c748a-eb56-4244-ba2c-0cee0f1d8b87",
    "metadata": {},
    "source": [
-    "# MAP"
+    "<h2 style=\"color:orange;\">MAP</h2>"
    ]
   },
   {
@@ -2987,10 +3001,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fc10066",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:orange;\">FILTER</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "59585d5a-7f17-4fe5-8b68-1bec296f06fd",
    "metadata": {},
    "source": [
-    "# FILTER\n",
     "- Filter works like map but instead of applying a function ti every value, we're picking which values we want to keep.\n",
     "- Because we're choosing which values to keep, the function that we give to filter must return a bool (True or False)."
    ]
@@ -3108,11 +3129,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da2b539f",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "<h2 style=\"color:orange;\">MODULES - EXTERNAL CODE</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2945a2f6-086a-45a2-920b-832406f77247",
    "metadata": {},
    "source": [
-    "# MODULES - EXTERNAL CODE\n",
-    "- In Python, we can create our own modules to store\r\n",
+    "- In Python, we can create our own modules to store\n",
     "code and import that code to other programs\n",
     "- Why do this? Reusability and modularity.\n",
     "- Python (.py) files in the same folder as our program can be directly imported.\n",
@@ -3120,10 +3152,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "a213b7a7-4264-484c-b680-c78bd50e9077",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
+    "```python\n",
     "retailxy/\n",
     "|- __init__.py\n",
     "|- products-py\n",
@@ -3131,7 +3168,8 @@
     "|- marketing/\n",
     "|     |- __init__.py\n",
     "|     |- discounts.py\n",
-    "|     |- promotions.py"
+    "|     |- promotions.py\n",
+    "```"
    ]
   },
   {
@@ -3326,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a5cfd254-c0fa-4d16-81a2-a04da416a676",
    "metadata": {},
    "outputs": [
@@ -3595,7 +3633,7 @@
    "metadata": {},
    "source": [
     "Path objects have many more useful methods:\n",
-    "- creating and deleting 􀀁les/folders\n",
+    "- creating and deleting files/folders\n",
     "- retrieving parent folders\n",
     "- retrieving absolute and relative paths\n",
     "- concatenating paths"
@@ -3737,70 +3775,6 @@
     "    -  recursively\n",
     "-  It's a traceback because it allows us to trace the problem back to its root. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a0913f0-7e7d-4b6d-b79a-b6f92da5d0a6",
-   "metadata": {},
-   "source": [
-    "# CATCHING ERRORS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c490dbe2-54c5-4792-800b-d0b0fe166392",
-   "metadata": {},
-   "source": [
-    "29:30"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc18ab5e-ccb2-44cf-aebc-f652e71eac44",
-   "metadata": {},
-   "source": [
-    "# CLASSES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "987e9c42-28bd-413a-878f-14e55bdc0567",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc68fa8c-aac1-4571-a132-298c685e6065",
-   "metadata": {},
-   "source": [
-    "# DEBUGGING"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b3cef48-ff11-44ed-a299-db21bbb9f08c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6a3b32c-ac95-4ff3-a2f5-91c6b2cae47f",
-   "metadata": {},
-   "source": [
-    "# DEMO & EXERCISE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19f1deb4-d077-4ca1-ab74-20e2f368b88c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
